@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add copy email option to the address context menu in dynamic view.
 * [mms] Support uploading multiple attachments at once in dynamic view.
 * [mms] Better reporting of e-mail address errors when composing.
 * [mms] Add list information display to dynamic view.
