@@ -2,6 +2,7 @@
 <<<<<<< HEAD
 v6.2.0-git
 ----------
+[mms] Add copy email option to the address context menu in dynamic view.
 
 [mms] Better reporting of e-mail address errors when composing.
 [mms] Add list information display to dynamic view.
